# agentic-data-quality-platform

./: .env.example  .gitignore  1.txt  README.md  pyproject.toml  requirement.txt
agents/: base.py
agents/alerting_agent/: agent.py
agents/approval_agent/: agent.py
agents/business_dq_agent/: agent.py
agents/metadata_agent/: agent.py
agents/monitoring_agent/: agent.py
agents/orchestrator/: agent.py
agents/reporting_agent/: agent.py
agents/sql_generation_agent/: agent.py
agents/technical_dq_agent/: agent.py
agents/validation_agent/: agent.py
api/: main.py
api/middleware/: auth.py
api/routers/: approvals.py  discovery.py  monitoring.py  reporting.py  rules.py  sql.py
configs/: logging_config.py  settings.py
docker/: Dockerfile  docker-compose.yml
docs/architecture/: decisions.md
dq_rules/: business_rules_template.yaml  rule_library.yaml  rule_schema.json
infra/cloud_build/: cloudbuild.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
output/: customer_profiles_dq_context.json  last_business_rule_prompt.txt  sp_dq_real_run_2f082531.sql  sp_dq_real_run_9b016663.sql
prompts/: business_dq_agent.py  metadata_agent.py  monitoring_agent.py  orchestrator.py  sql_generation_agent.py
schemas/: bq_schemas.py  models.py
sql_templates/: completeness_check.sql.j2  enum_values_check.sql.j2  freshness_check.sql.j2  range_check.sql.j2  referential_integrity_check.sql.j2  schema_drift_check.sql.j2  uniqueness_check.sql.j2  validity_regex_check.sql.j2  volume_check.sql.j2
tests/integration/: test_api.py
tests/manual/: create_loan_applications.py  real_run_business_rules.py
tests/unit/: test_dag_builder.py  test_models.py  test_settings.py  test_sql_builder.py
tools/airflow/: composer_client.py  dag_builder.py
tools/alerts/: email.py  slack.py
tools/bigquery/: client.py  execution.py  schema_discovery.py  setup.py
tools/dataplex/: client.py
tools/sql_tools/: __init__.py  builder.py  sql_generator.py  validator.py
ui/: app.py  requirements.txt
workflows/: dq_workflow.py  example_workflow.py
