[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-dq-observability-platform"
version = "1.0.0"
description = "Production-grade Agentic Data Quality & Observability Platform"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rahul Maloth", email = "rahulmaloth412@gmail.com" }]

dependencies = [
    "anthropic>=0.40.0",
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "google-cloud-dataplex>=1.12.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-secret-manager>=2.18.0",
    "google-cloud-monitoring>=2.19.0",
    "google-auth>=2.28.0",
    "apache-airflow>=2.8.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "jinja2>=3.1.3",
    "aiohttp>=3.9.3",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "sendgrid>=6.11.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "jsonschema>=4.21.1",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "respx>=0.20.2",
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "schemas*", "configs*", "api*", "workflows*", "prompts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "infra/*",
    "docker/*",
    "docs/*",
    ".venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
